--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node server",
-    "dev": "nodemon index"
+    "dev": "nodemon src/index"
   },
   "author": "Abdullah Öztürk",
   "license": "ISC",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "colors": "^1.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   }
 }
