--- a/package.json
+++ b/package.json
@@ -13,16 +13,11 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.7",
-    "pg": "^8.6.0",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.6.2"
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "colors": "^1.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7",
-    "sequelize-cli": "^6.2.0"
+    "nodemon": "^2.0.7"
   }
 }
