--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Abdullah Öztürk",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.22.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "colors": "^1.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "prisma": "^2.22.1"
   }
 }
