feat: user.model user-login.dto and jwt added into the project

--- a/sample.env
+++ b/sample.env
@@ -6,3 +6,6 @@ DB_HOST=
 DB_PASSWORD=
 DB_PORT=
 DB_URL=postgres://<USERNAME>:<PASSWORD>@<HOST>:<PORT>/<DB_NAME>
+JWT_SECRET=
+JWT_EXPIRE=
+COOKIE_EXPIRE=
