--- a/sample.env
+++ b/sample.env
@@ -9,3 +9,9 @@ DB_URL=postgres://<USERNAME>:<PASSWORD>@<HOST>:<PORT>/<DB_NAME>
 JWT_SECRET=
 JWT_EXPIRE=
 COOKIE_EXPIRE=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_EMAIL=
+SMTP_PASSWORD=
+FROM_EMAIL=
+FROM_NAME=
