--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-joi-validation": "^5.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.6.0"
+    "nodemailer": "^6.6.0",
+    "slugify": "^1.5.3"
   },
   "devDependencies": {
     "colors": "^1.4.0",
